# HPC

./: CMakeLists.txt  README.md
include/: functions.hpp  globals.hpp
src/: functions.cpp  globals.cpp  main.cpp
